<resources>
    <string name="app_name">FitStir</string>
    <string name="title_goals">Goals</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_health">Health</string>
    <string name="title_explore">Explore</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="log_in_intro">This is the log in fragment.</string>
    <string name="sign_up_intro">This is the sign up fragment.</string>
    <string name="question_intro">This is the question fragment.</string>
    <string name="profile_label">Profile</string>
    <string name="settings_label">Settings</string>
    <string name="log_out_label">Log Out</string>
    <string name="label_for_section">Label</string>
    <string name="icon_for_section">icon for section</string>
    <string name="background_for_section">background for section</string>
    <string name="run_club_intro">This is the run club fragment</string>
    <string name="upper_body_intro">This is the upper body fragment.</string>
    <string name="lower_body_intro">This is the lower body fragment.</string>
    <string name="weight_lifting_intro">This is the weight lifting fragment.</string>
    <string name="circuit_workouts_intro">This is the circuit workouts fragment.</string>
    <string name="yoga_intro">This is the yoga fragment.</string>
    <string name="email_validation">^[A-Za-z0-9._]{1,16}+@{1}+[a-z]{1,7}\\.[a-z]{1,3}$</string>
    <string name="reset_button_description"><u>This will delete all downloaded application data.</u></string>
    <string name="deactivate_button_description"><u>This will delete all saved user data.</u></string>
    <string name="hard_reset_button_description"><u>This will delete all downloaded application data \n<b>AND</b> saved user data.</u></string>

    <string-array name="theme_array">
        <item>Theme 1</item>
        <item>Theme 2</item>
    </string-array>
    <string-array name="range_array">
        <item>Last 1 Weeks</item>
        <item>Last 2 Weeks</item>
        <item>Last 1 Month</item>
        <item>Last 3 Months</item>
        <item>Last 6 Months</item>
        <item>Last 9 Months</item>
        <item>Last 12 Months</item>
    </string-array>
    <string-array name="interval_array">
        <item>1 Day</item>
        <item>1 Week</item>
        <item>1 Month</item>
    </string-array>
    <string-array name="unit_array">
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>


    <!-- TODO: Turn into enums -->
    <string-array name="api_nutrition_type">
        <item>cooking</item>
        <item>logging</item>
    </string-array>
    <string-array name="api_health">
        <item>alcohol-free</item>
        <item>celery-free</item>
        <item>crustacean-free</item>
        <item>dairy-free</item>
        <item>egg-free</item>
        <item>fish-free</item>
        <item>fodmap-free</item>
        <item>gluten-free</item>
        <item>immuno-supportive</item>
        <item>keto-friendly</item>
        <item>kindey-friendly</item>
        <item>kosher</item>
        <item>low-fat-abs</item>
        <item>low-potassium</item>
        <item>low-sugar</item>
        <item>lupine-free</item>
        <item>mustard-free</item>
        <item>no-oil-added</item>
        <item>paleo</item>
        <item>peanut-free</item>
        <item>pescatarian</item>
        <item>pork-free</item>
        <item>red-meat-free</item>
        <item>sesame-free</item>
        <item>shellfish-free</item>
        <item>soy-free</item>
        <item>sugar-conscious</item>
        <item>tree-nut-free</item>
        <item>vegan</item>
        <item>vegetarian</item>
        <item>wheat-free</item>
    </string-array>
    <string-array name="api_category">
        <item>generic-foods</item>
        <item>generic-meals</item>
        <item>packaged-foods</item>
        <item>fast-foods</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>