<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:drawable/screen_background_light_transparent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/layout_section_background"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/background_for_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/layout_section_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/icon_for_section"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/layout_section_label"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/label_for_section"
        android:textColor="@color/off_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/layout_section_background"
        app:layout_constraintEnd_toEndOf="@id/layout_section_background"
        app:layout_constraintStart_toStartOf="@id/layout_section_background"
        app:layout_constraintTop_toBottomOf="@id/layout_section_icon"
        app:layout_constraintVertical_bias="0.20" />

</androidx.constraintlayout.widget.ConstraintLayout>