<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_user_id_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="User ID: 785216"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <!--TODO: make button click animation-->
    <androidx.cardview.widget.CardView
        android:id="@+id/editbutton_cardView_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:cardCornerRadius="40dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="12dp"
            android:foreground="@drawable/ic_pencil_black_200dp"
            android:foregroundTint="?attr/colorOnSecondary" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_textbox"
        android:layout_width="380dp"
        android:layout_height="210dp"
        app:cardElevation="50dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_user_id_settings"
        app:layout_constraintVertical_bias="0.10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/textbox_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/fourline_textblock_background_wide"/>

            <TextView
                android:id="@+id/theme_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/themeID"
                android:layout_marginTop="24dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/themeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme1"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/range_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goal Date Range"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/theme_label"
                android:layout_toStartOf="@id/rangeID"
                android:layout_marginTop="45dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/rangeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Range1"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/themeID"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/interval_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Goal Date Interval"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/range_label"
                android:layout_toStartOf="@id/rangeID"
                android:layout_marginTop="44.5dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/intervalID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Interval1"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/rangeID"
                android:layout_marginTop="44.5dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/units_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Units"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@id/interval_label"
                android:layout_toStartOf="@id/unitID"
                android:layout_marginTop="45dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/unitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Unit1"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/intervalID"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="20dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_textbox">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESET APPLICATION"
            android:background="@drawable/rounded_pink_button"
            android:textColor="?attr/colorOnPrimary"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/reset_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_pink_button"
            android:backgroundTint="@color/alpha_80_off_white"
            android:text="@string/reset_button_description"
            android:gravity="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/reset_button"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deactivate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DEACTIVATE ACCOUNT"
            android:background="@drawable/rounded_pink_button"
            android:textColor="?attr/colorOnPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/reset_description"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/deactivate_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_pink_button"
            android:backgroundTint="@color/alpha_80_off_white"
            android:text="@string/deactivate_button_description"
            android:gravity="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/deactivate_button"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/hard_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HARD RESET"
            android:background="@drawable/rounded_pink_button"
            android:textColor="?attr/colorOnPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/deactivate_description"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/hard_reset_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_pink_button"
            android:backgroundTint="@color/alpha_80_off_white"
            android:text="@string/hard_reset_button_description"
            android:gravity="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/hard_reset_button"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>